--- a/src/assets/scss/_card.scss
+++ b/src/assets/scss/_card.scss
@@ -2,6 +2,7 @@
     padding-block: 0.75rem;
     padding-inline: .75rem;
     border-radius: 8px;
+    color: var(--foreground);
     background-color: var(--background);
     border: 1px solid var(--border);
     box-shadow: var(--shadow);
